agi: Disable figure list in SUN

--- a/libraries/agi/sun48.tex
+++ b/libraries/agi/sun48.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside,11pt]{starlink}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
 % ? End of specify used packages
