--- a/applications/ccdpack/ccdpack.tex
+++ b/applications/ccdpack/ccdpack.tex
@@ -1,219 +1,25 @@
-\documentclass[11pt]{article}
-\pagestyle{myheadings}
+\documentclass[11pt,nolof]{starlink}
+
 
 % -----------------------------------------------------------------------------
-\newcommand{\stardoccategory}  {Hypertext routine help}
-\newcommand{\stardocinitials}  {HRH}
-\newcommand{\stardocsource}    {ccdpack}
-\newcommand{\stardocnumber}    {1.0}
-\newcommand{\stardocauthors}   {P.W. Draper, M.B. Taylor}
-\newcommand{\stardocdate}      {July 2001}
-\newcommand{\stardoctitle}     {XREDUCE help}
-\newcommand{\stardocversion}   {Version 4.0}
-\newcommand{\stardocmanual}    {On-line help}
+\stardoccategory    {Hypertext routine help}
+\stardocinitials    {HRH}
+\stardocsource      {ccdpack}
+\stardocnumber      {1.0}
+\stardocauthors     {P.W. Draper, M.B. Taylor}
+\stardocdate        {July 2001}
+\stardoctitle       {XREDUCE help}
+\stardocversion     {Version 4.0}
+\stardocmanual      {On-line help}
 % -----------------------------------------------------------------------------
+\stardocname  {\stardocinitials /\stardocnumber}
 
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
+\providecommand{\butt}[1]{{\bf \tt #1}}
+\providecommand{\menu}[1]{{\bf \em #1}}
+\providecommand{\wlab}[1]{{\bf #1}}
+\providecommand{\text}[1]{{\tt #1}}
 
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjuction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\html}[1]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to recentre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Un-comment the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-%  Add any document specific \newcommand or \newenvironment commands here
-
-\newcommand{\butt}[1]{{\bf \tt #1}}
-\newcommand{\menu}[1]{{\bf \em #1}}
-\newcommand{\wlab}[1]{{\bf #1}}
-\newcommand{\text}[1]{{\tt #1}}
-
-%  Don't use the fbox options as this breaks up the text line too much.
-%\newcommand{\butt}[1]{\fbox{\tt #1}}
-%\newcommand{\menu}[1]{\fbox{\bf \em #1}}
-%\newcommand{\wlab}[1]{\fbox{\bf #1}}
-
-%  Don't use the colour option as this looks dreadful in netscape.
-%\definecolor{lightgrey}{gray}{.82}
-%\newcommand{\butt}[1]{\colorbox{lightgrey}{#1}}
-%\newcommand{\menu}[1]{\colorbox{lightgrey}{\em #1}}
-% -----------------------------------------------------------------------------
-%  Title Page.
-%  ===========
-\begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Large\bf \stardoctitle}
-   \end{center}
-   \vspace{5mm}
-
-%  Add heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Description}
-   \end{center}
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-%  Add picture here if required.
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      Particle Physics \& Astronomy Research Council \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-%  Start new section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-%  Document Abstract. (if used)
-%  ==================
-This document provides any additional hypertext help required by
+\stardocabstract{This document provides any additional hypertext help required by
 \xref{CCDPACK}{sun139}{} beyond that available in SUN/139.
 
 Primarily this consists of the window and context sensitive help
@@ -230,25 +36,33 @@ programs.
 
 The reduction of the actual data is separate to the GUI and uses the
 automated scheduling facilities of CCDPACK.
+}
 
+\begin{document}
+\scfrontmatter
+
+
+%  ==========================
+
+
+
+% -----------------------------------------------------------------------------
+%  Document Abstract. (if used)
+%  ==================
 
 % -----------------------------------------------------------------------------
 %  Latex document Table of Contents (if used).
 %  ===========================================
-\begin{latexonly}
-  \setlength{\parskip}{0mm}
-  \tableofcontents
-  \setlength{\parskip}{\medskipamount}
-  \markright{\stardocname}
-\end{latexonly}
+
 % -----------------------------------------------------------------------------
 \section{This package \xlabel{OnVersion}}
+
 \begin{center}
 {\Huge \bf  CCDPACK \\
 \LARGE Data reduction package \\
-\Large \em \stardocversion \\
+\Large \emph{\stardocversion} \\
 }
-\stardocdate
+\thestardocdate
 \end{center}
 
 \section{How to get context sensitive help \xlabel{OnContext}}
@@ -271,11 +85,11 @@ This window displays buttons and menus that allow you to get
 ready to perform an automated reduction. The sequence of operations
 that you need to perform depends on the type of data you have.
 
-\begin{rawhtml}
+\begin{html}
 <P>
 <IMG SRC="xreduce.gif">
 <P>
-\end{rawhtml}
+\end{html}
 
 Under the \menu{Options} menu there is a \menu{Set Detector...}
 item. This will list the known CCD detectors. If you're in luck the
@@ -661,11 +475,11 @@ this means that images originating from different CCDs
 can use parameter settings.
 If you have indicated that each Set has 3 members, there will be a
 panel near the top of the window looking like this:
-\begin{rawhtml}
+\begin{html}
 <P>
 <IMG SRC="siselect.gif">
 <P>
-\end{rawhtml}
+\end{html}
 Click each button in turn to set the parameters for each Set Index
 value (e.g. each CCD).  When you fill in the values for one Index,
 they will be filled in for as yet blank values on other Index, so you
@@ -775,14 +589,14 @@ The bias strips should be seen as dark regions down the side of the
 image, these usually either run down the sides (or tops) of the image
 and sometimes run along the sides and either the top or bottom, i.e.
 
-\begin{rawhtml}
+\begin{html}
 <IMG ALIGN=CENTER SRC="geom1.gif">
 <P>
 or
 <P>
 <IMG ALIGN=CENTER SRC="geom2.gif">
 <P>
-\end{rawhtml}
+\end{html}
 
 It is often recommended that you only use the strip on the left-hand
 side as the overscan (the right-hand strip) may be contaminated with
@@ -886,11 +700,11 @@ supply the names of the different types of data.
 This window allows you to enter files into their different categories.
 The categories that you have selected are shown at the top of the
 window in the \wlab{Data type:} section, this looks something like:
-\begin{rawhtml}
+\begin{html}
 <P>
 <IMG SRC="datatype.gif">
 <P>
-\end{rawhtml}
+\end{html}
 
 To organize your files you select one of the options from
 \wlab{Data type:} (in the case above \text{TARGET} is selected), and
@@ -1056,11 +870,11 @@ to sort your data into its different types.
             \label{refndf}}
 This part of the window helps you to find out what FITS headers are
 available in your data.
-\begin{rawhtml}
+\begin{html}
 <P>
 <IMG SRC="fitsextract.gif">
 <P>
-\end{rawhtml}
+\end{html}
 It does this by extracting the names of any headers in a data frame
 and listing them. Choose a reference frame either by typing its name
 in the \wlab{Reference frame:} entry or by choosing the
@@ -1071,11 +885,11 @@ item:} entry on the right.
 \subsection{Typing FITS headers \xlabel{CCDCreateImportTableFITStypes}}
 In this part of the window you should name all the FITS headers that
 you are going to use in the table.
-\begin{rawhtml}
+\begin{html}
 <P>
 <IMG SRC="fitstype.gif">
 <P>
-\end{rawhtml}
+\end{html}
 The data type of the headers are also needed (these are used when
 extracting the header values). The data types are called
 \wlab{HDS type} as these are the native forms that CCDPACK understands. If you
@@ -1098,11 +912,11 @@ names and types, but take care to spell these correctly.
 This part of the window is used to specify how FITS header item values
 should be converted into CCDPACK extension items (the extension is a
 part of your data for storing package specific information).
-\begin{rawhtml}
+\begin{html}
 <P>
 <IMG SRC="fitsfunction.gif">
 <P>
-\end{rawhtml}
+\end{html}
 
 You should understand the
 \xref{structure}{sun139}{TableFormat}
@@ -1249,11 +1063,11 @@ accept the window.
 \section{Starting the reduction \xlabel{CCDReduceWindow}}
 This window allows you to set the final configuration options before
 scheduling a reduction and running it in the background.
-\begin{rawhtml}
+\begin{html}
 <P>
 <IMG SRC="ccdreduce.gif">
 <P>
-\end{rawhtml}
+\end{html}
 
 
 The\xlabel{CCDReduceDebias} range of possible reduction options
