--- a/applications/astrom/sun5.tex
+++ b/applications/astrom/sun5.tex
@@ -1,27 +1,25 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-\usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
 
-\pagestyle{myheadings}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
+\stardoccategory {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource    {sun\stardocnumber}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {5.18}
-\newcommand{\stardocauthors}   {P.\,T.\,Wallace, Norman Gray}
-\newcommand{\stardocdate}      {2nd May 2003}
-\newcommand{\stardoctitle}     {ASTROM \\[2ex] Basic astrometry program}
-\newcommand{\stardocversion}   {v3.7}
-\newcommand{\stardocmanual}    {User's Guide}
-\newcommand{\stardocabstract}  {%
+\stardocnumber   {5.18}
+\stardocauthors   {P.\,T.\,Wallace, Norman Gray}
+\stardocdate        {2nd May 2003}
+\stardoctitle        {ASTROM \\[2ex] Basic astrometry program}
+\stardocversion   {v3.7}
+\stardocmanual   {User's Guide}
+\stardocabstract  {%
 ASTROM performs ``plate reductions''.  You supply star positions from a
 catalogue and the \xy\ ccoordinates of the corresponding star images.
 ASTROM uses this information to establish the relationship between
@@ -30,255 +28,17 @@ determined.}
 
 % ? End of document identification
 % -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-\newcommand{\radec}     {$[\alpha,\delta\,]$}
-\newcommand{\xy}        {$[x,y\,]$}
-\newcommand{\xieta}     {$[\xi,\eta\,]$}
+% ? Document specific \providecommand or \newenvironment commands.
+\providecommand{\radec}     {$[\alpha,\delta\,]$}
+\providecommand{\xy}        {$[x,y\,]$}
+\providecommand{\xieta}     {$[\xi,\eta\,]$}
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\textsc Rutherford Appleton Laboratory} \hfill {\textbf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\textbf \stardocversion \\ [4ex]}
-   {\Huge\textbf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf Abstract}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1 ALIGN=CENTER> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 % ? Main text
 
@@ -317,14 +77,14 @@ defaulted either by leaving it out or by using a pair of
 double-quotes.  The specifiers \texttt{input=} and \texttt{report=}
 are optional; if they are omitted, they are assigned to the first and
 second unqualified filenames.  Thus
-\begin{quote}
-\texttt{astrom astrom.input}
-\end{quote}
+\begin{terminalv}
+astrom astrom.input
+\end{terminalv}
 would read the input file \texttt{astrom.input}, and write a report on
 the default \texttt{astrom.lis}.
-\begin{quote}
-\texttt{astrom report=astrom.report fits=wcsout input=astrom.input}
-\end{quote}
+\begin{terminalv}
+astrom report=astrom.report fits=wcsout input=astrom.input
+\end{terminalv}
 reads \texttt{astrom.input}, and produces its report on
 \texttt{astrom.report}, plus a number of FITS files with names
 beginning \texttt{wcsout} (see Section~\ref{output} below).  The
@@ -1289,13 +1049,13 @@ of the unknown stars.
 \bibitem{fitswcs1}
 E.~W. Greisen and M.~R. Calabretta.
 \newblock Representations of world coordinates in {FITS}.
-\newblock {\em Astronomy and Astrophysics}, 395(3):1061--1076, December 2002.
+\newblock \emph{Astronomy and Astrophysics}, 395(3):1061--1076, December 2002.
 \newblock `Paper~I', also available at \cite{fitswcsurl}.
 
 \bibitem{fitswcs2}
 M.~R. Calabretta and E.~W. Greisen.
 \newblock Representations of celestial coordinates in {FITS}.
-\newblock {\em Astronomy and Astrophysics}, 395(3):1077--1122, December 2002.
+\newblock \emph{Astronomy and Astrophysics}, 395(3):1077--1122, December 2002.
 \newblock `Paper~II', also available at \cite{fitswcsurl}.
 
 \bibitem{fitswcsurl}
@@ -1485,7 +1245,7 @@ distortion and plate centre, respectively, are to be fitted.
  \texttt{GENE\ldots} DISTORTION = generalized pincushion/barrel distortion
 
 \goodbreak
-\item[\xlabel{PROJECTION}DISTORTION]\mbox{}
+\item[\xlabel{DISTORTION}DISTORTION]\mbox{}
 
 A number, the parameter $q$ in the pincushion/barrel distortion expression
 $\mbox{\boldmath $r'$}=(1+q\mid\mbox{\boldmath $r$}\mid^2)\mbox{\boldmath $r$}$,
@@ -1690,7 +1450,7 @@ It should be noted that the report file contains Fortran printer codes.
 \vfill
 \begin{tiny}
 \begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 1* * * * * * * * * * * * *
  *  A S T R O M E T R Y  *
  * * * * * * * * * * * * *
@@ -1713,13 +1473,13 @@ It should be noted that the report file contains Fortran printer codes.
                 3         19 01 13.606  -63 49 14.84  +0.0020 -0.026  B1950.0  B1950.000  0.000      +17.246      +64.945
                 4         19 08 29.088  -63 57 42.79  +0.0016 +0.018  B1950.0  B1950.000  0.000      -25.314      +57.456
                 5         19 02 10.088  -63 29 16.73  +0.0012 -0.019  B1950.0  B1950.000  0.000      +11.890      +82.766
-\end{verbatim}
+\end{terminalv}
 \end{quote}
 
 \vfill
 
 \begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 1Plate solution: 4-coefficient
  -----------------------------
 
@@ -1750,13 +1510,13 @@ It should be noted that the report file contains Fortran printer codes.
                 5            19 02 10.117  -63 29 17.20    19 02 10.220  -63 29 16.92      +0.682    +0.280     0.738
 
                                                                                   RMS :     0.530     0.401     0.665
-\end{verbatim}
+\end{terminalv}
 \end{quote}
 
 \newpage
 
 \begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 1Plate solution: 6-coefficient
  -----------------------------
 
@@ -1790,13 +1550,13 @@ It should be noted that the report file contains Fortran printer codes.
                 5            19 02 10.117  -63 29 17.20    19 02 10.181  -63 29 17.01      +0.422    +0.191     0.463
 
                                                                                   RMS :     0.224     0.102     0.246
-\end{verbatim}
+\end{terminalv}
 \end{quote}
 
 \vspace*{20mm}
 
 \begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 1Unknown stars:    B1950.0 mean places for epoch B1974.500
 
              :               4-coefficient model               :                6-coefficient model                :
@@ -1804,7 +1564,7 @@ It should be noted that the report file contains Fortran printer codes.
              :                                                 :                                                   :
              :   -5.103  +58.868 -> 19 05 01.697  -63 56 17.13 :   -5.103  +58.868 -> 19 05 01.7942  -63 56 16.702 :
              :   -5.120  +58.862 <- 19 05 01.874  -63 56 17.54 :   -5.111  +58.856 <- 19 05 01.8741  -63 56 17.539 :
-\end{verbatim}
+\end{terminalv}
 \end{quote}
 \end{tiny}
 
