surf: Add title picture back to SUN/216

--- a/applications/surf/docs/sun216/sun216.tex
+++ b/applications/surf/docs/sun216/sun216.tex
@@ -51,6 +51,7 @@
 \stardoctitle       {SURF -- SCUBA User Reduction Facility}
 \stardocversion     {1.6}
 \stardocmanual      {User's manual}
+\startitlepic{\includegraphics[width=2.0in]{sun216_logo}}
 \stardoccopyright   {Copyright \copyright\ 1997-2000,2003 Particle Physics and Astronomy Research Council}
 \stardocabstract  {%
 \scusoft\ is a set of ADAM tasks necessary for reducing demodulated
