cnf: Fix one incorrect ref in SUN/209
The others seem to involve underscores and the local SST macros.

--- a/libraries/cnf/sun209.tex
+++ b/libraries/cnf/sun209.tex
@@ -6940,7 +6940,7 @@ characters}
 {   Export a C int array into a FORTRAN LOGICAL array}
 }
 
-\subsection{\xlabel{logical_array_handling}Memory and Pointer Handling}
+\subsection{\xlabel{memory_and_pointer_handling}Memory and Pointer Handling}
 \routinelist{
 \listroutine{cnfCalloc}
 {   Allocate space that may be accessed from C and FORTRAN}
