Figaro: Update some of the related applications to prevent hlink warnings.

--- a/applications/figaro/sun86a.tex
+++ b/applications/figaro/sun86a.tex
@@ -11244,7 +11244,7 @@ FIGARO: \htmlref{ICSUB}{ICSUB}, \htmlref{ICADD}{ICADD}, \htmlref{ICDIV}{ICDIV}, 
 \end{description}
 
 \item [{\bf See also:}]
-\xref{KAPPA}{sun95}{}: \xref{CONTOVER}{sun95}{CONTOVER}, \xref{TURBOCONT}{sun95}{TURBOCONT}.\\
+\xref{KAPPA}{sun95}{}: \xref{CONTOUR}{sun95}{CONTOUR}.\\
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
@@ -11594,7 +11594,8 @@ FIGARO: \htmlref{ICADD}{ICADD}, \htmlref{ICMULT}{ICMULT}, \htmlref{ICDIV}{ICDIV}
 
 \item [{\bf See also:}]
 FIGARO: \htmlref{IGCUR}{IGCUR}.\\
-\xref{KAPPA}{sun95}{}: \xref{CURSOR}{sun95}{CURSOR}, \xref{INSPECT}{sun95}{INSPECT}, \xref{PICCUR}{sun95}{PICCUR}.\\
+\xref{KAPPA}{sun95}{}: \xref{CURSOR}{sun95}{CURSOR}, \xref{PICCUR}{sun95}{PICCUR};\\
+\xref{GAIA}{sun214}{}.\\
 
 \item [{\bf Authors:}]
  KS: Keith Shortridge (CIT, AAO)
@@ -11840,7 +11841,9 @@ FIGARO: \htmlref{IADD}{IADD}, \htmlref{ISUB}{ISUB}, \htmlref{IMULT}{IMULT}, \htm
 
 \item [{\bf See also:}]
 FIGARO: \htmlref{ICUR}{ICUR}. \\
-\xref{KAPPA}{sun95}{}: \xref{CURSOR}{sun95}{CURSOR}, \xref{INSPECT}{sun95}{INSPECT}, \xref{PICCUR}{sun95}{PICCUR}.\\
+\xref{KAPPA}{sun95}{}: \xref{CURSOR}{sun95}{CURSOR}, \xref{PICCUR}{sun95}{PICCUR}.\\
+\xref{GAIA}{sun214}{}.\\
+
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
@@ -11901,7 +11904,8 @@ FIGARO: \htmlref{ICUR}{ICUR}. \\
 
 \item [{\bf See also:}]
 FIGARO: \htmlref{IMAGE}{IMAGE}.\\
-\xref{KAPPA}{sun95}{}: \xref{DISPLAY}{sun95}{DISPLAY}, \xref{GREYPLOT}{sun95}{GREYPLOT}.\\
+\xref{KAPPA}{sun95}{}: \xref{DISPLAY}{sun95}{DISPLAY};\\
+\xref{KAPRH}{sun239}{}:\xref{GREYPLOT}{sun239}{GREYPLOT}.\\
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
@@ -12356,7 +12360,9 @@ FIGARO: \htmlref{IADD}{IADD}, \htmlref{ISUB}{ISUB}, \htmlref{IDIV}{IDIV}, \htmlr
 
 \item [{\bf See also:}]
 FIGARO: \htmlref{ESPLOT}{ESPLOT}, \htmlref{MSPLOT}{MSPLOT}, \htmlref{SPLOT}{SPLOT}.\\
-\xref{KAPPA}{sun95}{}: \xref{INSPECT}{sun95}{INSPECT}, \xref{LINPLOT}{sun95}{LINPLOT}, \xref{MLINPLOT}{sun95}{MLINPLOT}.\\
+\xref{KAPPA}{sun95}{}: \xref{LINPLOT}{sun95}{LINPLOT}, \xref{MLINPLOT}{sun95}{MLINPLOT};\\
+\xref{GAIA}{sun214}{}.\\
+
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
@@ -12527,7 +12533,7 @@ FIGARO: \htmlref{ESPLOT}{ESPLOT}, \htmlref{MSPLOT}{MSPLOT}, \htmlref{SPLOT}{SPLO
 
 \item [{\bf See also:}]
 FIGARO: \htmlref{IREVY}{IREVY}, \htmlref{IROT90}{IROT90}.\\
-\xref{KAPPA}{sun95}{}: \xref{FLIP}{sun95}{FLIP}, \xref{ROTATE}{sun95}{ROTATE}, \xref{TRANSFORMER}{sun95}{TRANSFORMER}.\\
+\xref{KAPPA}{sun95}{}: \xref{FLIP}{sun95}{FLIP}, \xref{REGRID}{sun95}{REGRID}, \xref{ROTATE}{sun95}{ROTATE}.\\
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
@@ -12574,7 +12580,7 @@ FIGARO: \htmlref{IREVY}{IREVY}, \htmlref{IROT90}{IROT90}.\\
 
 \item [{\bf See also:}]
 FIGARO: \htmlref{IREVX}{IREVX}, \htmlref{IROT90}{IROT90}.\\
-\xref{KAPPA}{sun95}{}: \xref{FLIP}{sun95}{FLIP}, \xref{ROTATE}{sun95}{ROTATE}, \xref{TRANSFORMER}{sun95}{TRANSFORMER}.\\
+\xref{KAPPA}{sun95}{}: \xref{FLIP}{sun95}{FLIP}, \xref{REGRID}{sun95}{REGRID}, \xref{ROTATE}{sun95}{ROTATE}.\\
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
@@ -12763,7 +12769,7 @@ FIGARO: \htmlref{IREVX}{IREVX}, \htmlref{IROT90}{IROT90}.\\
 
 \item [{\bf See also:}]
 FIGARO: \htmlref{IREVX}{IREVX}, \htmlref{IREVY}{IREVY}.\\
-\xref{KAPPA}{sun95}{}: \xref{FLIP}{sun95}{FLIP}, \xref{ROTATE}{sun95}{ROTATE}, \xref{TRANSFORMER}{sun95}{TRANSFORMER}.\\
+\xref{KAPPA}{sun95}{}: \xref{FLIP}{sun95}{FLIP}, \xref{REGRID}{sun95}{REGRID}, \xref{ROTATE}{sun95}{ROTATE}.\\
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
@@ -13567,7 +13573,8 @@ FIGARO: \htmlref{ICONV3}{ICONV3}, \htmlref{IXSMOOTH}{IXSMOOTH}, \htmlref{MEDFILT
 \end{description}
 
 \item [{\bf See also:}]
-\xref{KAPPA}{sun95}{}: \xref{HISTAT}{sun95}{HISTAT}, \xref{HISTOGRAM}{sun95}{HISTOGRAM}, \xref{INSPECT}{sun95}{INSPECT}, \xref{MSTATS}{sun95}{MSTATS}, \xref{NUMB}{sun95}{NUMB}, \xref{STATS}{sun95}{STATS}.\\
+\xref{KAPPA}{sun95}{}: \xref{HISTAT}{sun95}{HISTAT}, \xref{HISTOGRAM}{sun95}{HISTOGRAM}, \xref{MSTATS}{sun95}{MSTATS}, \xref{NUMB}{sun95}{NUMB}, \xref{STATS}{sun95}{STATS};\\
+\xref{GAIA}{sun214}{}.\\
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
@@ -13651,7 +13658,7 @@ FIGARO: \htmlref{ICONV3}{ICONV3}, \htmlref{IXSMOOTH}{IXSMOOTH}, \htmlref{MEDFILT
 \end{description}
 
 \item [{\bf See also:}]
-\xref{KAPPA}{sun95}{}: \xref{BLOCK}{sun95}{BLOCK}, \xref{COMPAVE}{sun95}{COMPAVE}, \xref{COMPICK}{sun95}{COMPICK}, \xref{PIXDUPE}{sun95}{PIXDUPE}, \xref{SQORST}{sun95}{SQORST}, \xref{TRANSFORMER}{sun95}{TRANSFORMER}.\\
+\xref{KAPPA}{sun95}{}: \xref{BLOCK}{sun95}{BLOCK}, \xref{COMPAVE}{sun95}{COMPAVE}, \xref{COMPICK}{sun95}{COMPICK}, \xref{PIXDUPE}{sun95}{PIXDUPE}, \xref{REGRID}{sun95}{REGRID}, \xref{SQORST}{sun95}{SQORST}.\\
 
 \item [{\bf Source comments:}]
 \begin{verbatim}
