HDSTRACE: Start to merge changes for UNIX era.
Tim beat me to converting SUN/102 to the new scheme.  It had been on my
desk for over two weeks after seeing that it was in LaTex 2.09 and had not
been converted to UNIX and hypertext era.  The first attempt to go to
LaTeX2e failed, but using the subsequently released new shorter prologue
looked a better approach (and so it proved as it built).

--- a/applications/hdstrace/sun102.tex
+++ b/applications/hdstrace/sun102.tex
@@ -4,15 +4,15 @@
 \stardoccategory    {Starlink User Note}
 \stardocinitials    {SUN}
 \stardocnumber      {102.4}
-\stardocsource  {sun\stardocnumber}
+\stardocsource      {sun\stardocnumber}
 \stardocauthors     {Malcolm J. Currie}
 \stardocdate        {2014 November 15}
 \stardoctitle       {HDSTRACE --- Listing HDS Data Files}
 \stardocversion     {1.2}
 \stardocmanual      {User's Guide}
-\stardocabstract    {This document describes the HDSTRACE application which can
-be used to list the contents of an HDS file.}
-\stardoccopyright {Copyright \copyright\ 1993-2014 Science and Technology Facilities Council}
+\stardocabstract    {This document describes HDSTRACE, an application
+that lists the contents of an HDS file.}
+\stardoccopyright {Copyright \copyright\ 1991-2014 Science and Technology Facilities Council}
 % -----------------------------------------------------------------------------
 
 \begin{document}
